--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
+
+
 * {
   margin: 0;
   padding: 0;
@@ -5,5 +8,14 @@
 }
 
 :root {
-  
+  /* Colors */
+  --purple-100: hsl(254, 88%, 90%); 
+  --purple-500: hsl(256, 67%, 59%); 
+  --yellow-100: hsl(31, 66%, 93%); 
+  --yellow-500: hsl(39, 100%, 71%); 
+  --white: hsl(0, 0%, 100%); 
+  --black: hsl(0, 0%, 7%);
+
+  /* Fonts */
+  --font-size: 18px;
 }
