--- a/style.css
+++ b/style.css
@@ -19,3 +19,72 @@
   /* Fonts */
   --font-size: 18px;
 }
+
+.container {
+  min-height: 100vh;
+  display: grid;
+  gap: 32px;
+  padding: 32px 16px;
+  font-family: "DM Sans", sans-serif;
+}
+
+.card {
+  border-radius: 10px;
+  font-size: 26px;
+  line-height: 90%;
+  letter-spacing: -6%;
+  font-weight: 500;
+}
+
+.card:first-of-type {
+  background-color: var(--purple-500);
+  color: var(--white);
+  padding: 40px 32px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .card__title {
+    font-size: 46px;
+    font-weight: 500;
+    line-height: 90%;
+    letter-spacing: -4%;
+    text-wrap: balance;
+    margin-bottom: 32px;
+
+    strong {
+      font-weight: normal;
+      color: var(--yellow-500);
+    }
+
+    @media (min-width: 1024px) {
+      font-size: 62px;
+    }
+
+    @media (min-width: 768px) {
+      font-size: 54px;
+    }
+  }
+  .card__img {
+    width: 192px;
+  }
+
+  .card__text {
+    font-size: 18px;
+    line-height: 20px;
+    font-weight: 500;
+
+    @media (min-width: 1024px) {
+      font-size: 16px;
+      line-height: 100%;
+      letter-spacing: -3%;
+    }
+    }
+}
+
+.card:nth-child(2) {
+
+}
+
+
