--- a/style.css
+++ b/style.css
@@ -1,10 +1,21 @@
  @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 
 
-* {
+*, *::before, *::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  /* background-color: #F6F5F6; */
+}
+
+img,
+video {
+  max-width: 100%;
+  height: auto;
+  display: block;
 }
 
 :root {
@@ -20,15 +31,32 @@
 
 
 .container {
-  display: flex;
-  flex-direction: column;
+  display: grid;
   gap: 32px;
   font-family: "DM Sans", sans-serif;
   background-color: #F6F5F6; 
   padding: 32px 16px;
 
+
   @media (min-width: 768px) {
     padding: 52px 42px;
+    grid-template-columns: repeat(2, 1fr);
+    
+  }
+
+  @media (min-width: 1024px) {
+    /* grid-template-columns: repeat(4, 1fr); */
+    grid-template-areas: 
+    "create social social schedule"
+    "create social social schedule"
+    "create social social schedule"
+    "create social social schedule"
+    "create manage maintain schedule"
+    "write  manage maintain schedule"
+    "write  manage maintain schedule"
+    "write  fifty_six grow grow"
+    "write  fifty_six grow grow"
+    "write  fifty_six grow grow";
   }
   
 }
@@ -43,10 +71,6 @@
   letter-spacing: -6%;
   font-weight: 500;
   padding: 32px;
-
-  .card__img {
-    width: 100px;
-  }
 }
 
 .card__one {
@@ -54,28 +78,32 @@
   color: var(--white);
   padding: 40px 32px;
   text-align: center;
-
+  
+  
   .card__title {
     font-size: 46px;
     font-weight: 500;
     line-height: 90%;
     letter-spacing: -4%;
-    text-wrap: balance;
     margin-bottom: 32px;
-
+    
     strong {
       font-weight: normal;
       color: var(--yellow-500);
     }
-
+    
+    @media (min-width: 768px) {
+      font-size: 54px;
+      grid-column: 1/3;
+    }
+    
     @media (min-width: 1024px) {
       font-size: 62px;
     }
 
-    @media (min-width: 768px) {
-      font-size: 54px;
-    }
+
   }
+
   .card__img {
     width: 192px;
   }
@@ -91,6 +119,14 @@
       letter-spacing: -3%;
     }
   }
+
+  @media (min-width: 768px) {
+    grid-column: 1/3;
+  }
+
+  @media (min-width: 1024px) {
+    grid-area: social;
+  }
 }
 
 .card__two {
@@ -101,6 +137,16 @@
   .card__img {
     width: 316px;
   }
+  
+  @media (min-width: 768px) {
+    justify-content: space-between;
+    font-size: 28px;
+    
+  }
+  
+  @media (min-width: 1024px) {
+    grid-area: manage;
+  }
 }
 
 .card__three {
@@ -108,42 +154,66 @@
   padding-bottom: 0;
   gap: 16px;
   align-items: start;
-
+  justify-content: space-between;
+  
   .card__img {
     width: 208px;
+  }
+  
+  @media (min-width: 1024px) {
+    grid-area: maintain;
   }
 
 }
 
 .card__four {
   background-color: var(--purple-100);
+  /* background-color: red; */
   padding: 32px;
   gap: 24px;
   text-align: center;
-
+  
+  
   .card__title{
     font-size: 26px;
     font-weight: 500;
   }
-  
-  .card__img {
-    width: 100%;
-  }
-
+    
   .card__text {
     font-size: 18px;
     line-height: 20px;
   }
-
+    
   @media (min-width: 768px) {
+    grid-column: 1/3;
+    
     .card__title {
       font-size: 28px;
     }
+    
+    .card__img {
+      width: 350px;
+    }
+    
+    .card__text {
+      text-align: center;
+      width: 350px;
+    }
   }
-
+    
   @media (min-width: 1024px) {
+    grid-area: schedule;
+    justify-content: center;
+    /* padding: 0; */
+    overflow: hidden;
+
     .card__title {
       font-size: 32px;
+    }
+
+    .card__img {
+      height: 319px;
+      margin-right: -150px;
     }
   }
 }
@@ -151,11 +221,11 @@
 .card__five {
   background-color: var(--purple-500);
   gap: 40px;
-
+  
   .card__img {
     width: 228px;
   }
-
+  
   .card__text {
     font-size: 32px;
     line-height: 28px;
@@ -163,18 +233,21 @@
     text-align: center;
     text-wrap: balance;
   }
-
+  
   @media (min-width: 768px) {
     flex-direction: row ;
     padding-inline: 100px;
-
+    grid-column: 1/3;
+    
     .card__text {
       font-size: 36px;
       line-height: 90%;
     }
   }
-
+  
   @media (min-width: 1024px) {
+    grid-area: grow;
+
     .card__text {
         font-size: 40px;
     }
@@ -186,7 +259,7 @@
   background-color: var(--white);
   align-items: start;
   gap: 24px;
-
+  
   .card__title {
     font-size: 46px;
     line-height: 42px;
@@ -194,20 +267,26 @@
     letter-spacing: -4%;
     margin-bottom: 15px;
   }
-
+  
   .card__text {
     font-size: 18px;
     line-height: 20px;
     font-weight: normal;
   }
-
+  
   .card__img {
     width: 178px;
   }
-
+  
   @media (min-width: 768px) {
     flex-direction: row;
     justify-content: space-between;
+    grid-column: 1/3;
+  }
+  
+  @media (min-width: 1024px) {
+    grid-area: fifty_six;
+    flex-direction: column;
   }
 }
 
@@ -215,30 +294,34 @@
   background-color: var(--yellow-100);
   align-items: start;
   gap: 24px;
-
+  
   .card__title {
     font-size: 32px;
     line-height: 90%;
     letter-spacing: -6%;
     font-weight: 500;
-
+    
     .quicker {
       color: var(--purple-500);
     }
   }
-
+  
   .card__img {
     width: 190.47px;
   }
-
+  
   @media (min-width: 768px) {
+    justify-content: center;
+    
     .card__title {
       font-size: 36px;
-      line-height: 30;
+      line-height: 30px;
     }
   }
-
+  
   @media (min-width: 1024px) {
+    grid-area: create;
+
     .card__title {
       font-size: 40px;
     }
@@ -250,18 +333,25 @@
   background-color: var(--yellow-500);
   gap: 24px;
   align-items: start;
-
+  
   .card__title {
     font-size: 32px;
     line-height: 90%;
     letter-spacing: -6%;
     font-weight: 500;
   }
-
+  
   .card__img {
     width: 300px;
-
   }
 
+  @media (min-width: 1024px) {
+    grid-area: write; 
+    justify-content: space-between;
 
+      .card__img {
+        /* width: 100%; */
+          /* height: 50%; */
+        }
+  }
 }
