--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ video {
   }
 
   @media (min-width: 1024px) {
-    /* grid-template-columns: repeat(4, 1fr); */
+    grid-template-columns: repeat(4, 1fr);
     grid-template-areas: 
     "create social social schedule"
     "create social social schedule"
