--- a/style.css
+++ b/style.css
@@ -204,16 +204,24 @@ video {
   @media (min-width: 1024px) {
     grid-area: schedule;
     justify-content: center;
-    /* padding: 0; */
+    align-items: center;
+    padding: 0;
     overflow: hidden;
+    text-align: left;
 
     .card__title {
       font-size: 32px;
+      padding-inline: 42px;
+      text-wrap: balance;
     }
 
     .card__img {
       height: 319px;
-      margin-right: -150px;
+      margin-right: -74px;
+    }
+    .card__text {
+      text-align: left;
+      padding-inline: 72px;
     }
   }
 }
@@ -250,6 +258,7 @@ video {
 
     .card__text {
         font-size: 40px;
+
     }
   }
 
@@ -348,10 +357,5 @@ video {
   @media (min-width: 1024px) {
     grid-area: write; 
     justify-content: space-between;
-
-      .card__img {
-        /* width: 100%; */
-          /* height: 50%; */
-        }
   }
 }
